# Agent_L

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.githooks/: pre-commit
doc/: ARCHITECTURE.md  ROADMAP.md  STRUCTURE.md  test-cases.md
prompts/: code_scope.md  orchestrator.md  persona.md  persona_goal_reminder.md  persona_synthesis.md  search.md
src/: app.rs  config.rs  lib.rs  main.rs  ollama.rs  prompts.rs  startup.rs  ui.rs
src/agents/: compression.rs  mod.rs  orchestrator.rs  persona.rs  schema.rs
src/agents/specialists/: chat.rs  code.rs  mod.rs  search.rs
src/tools/: claude_code.rs  executor.rs  mod.rs  search_tools.rs  tavily_search.rs
tests/: live.rs  ollama_integration.rs  orchestrator_integration.rs  pipeline_integration.rs  search_integration.rs  startup_integration.rs  synthesis_integration.rs
tests/live/: README.md  live_factual_review.rs  live_pipeline.rs  live_synthesis_review.rs
