[package]
name = "agent_l"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
dotenvy = "0.15.7"
futures-util = "0.3.32"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }

[dependencies.tempfile]
version = "3"

[dev-dependencies]
wiremock = "0.6"
